# Ink-screen-test

./: CMakeLists.txt  sdkconfig.defaults
components/epd_drivers/: CMakeLists.txt
components/epd_drivers/src/: epd_ssd1619.c
main/: main.c  test_patterns.c
main/components/epd_drivers/include/: epd_common.h
